Fix spacing again

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ dl dt i {
 }
 
 .spacing-1 {
-  padding-top: 1rem;
+  padding-top: 1.5rem;
 }
 
 .spacing-2 {
